; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/actions/extr_owl-reset.c_owl_reset_status.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/actions/extr_owl-reset.c_owl_reset_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reset_controller_dev = type { i32 }
%struct.owl_reset = type { i32, %struct.owl_reset_map* }
%struct.owl_reset_map = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.reset_controller_dev*, i64)* @owl_reset_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @owl_reset_status(%struct.reset_controller_dev* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.reset_controller_dev*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.owl_reset*, align 8
  %7 = alloca %struct.owl_reset_map*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.reset_controller_dev* %0, %struct.reset_controller_dev** %4, align 8
  store i64 %1, i64* %5, align 8
  %10 = load %struct.reset_controller_dev*, %struct.reset_controller_dev** %4, align 8
  %11 = call %struct.owl_reset* @to_owl_reset(%struct.reset_controller_dev* %10)
  store %struct.owl_reset* %11, %struct.owl_reset** %6, align 8
  %12 = load %struct.owl_reset*, %struct.owl_reset** %6, align 8
  %13 = getelementptr inbounds %struct.owl_reset, %struct.owl_reset* %12, i32 0, i32 1
  %14 = load %struct.owl_reset_map*, %struct.owl_reset_map** %13, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds %struct.owl_reset_map, %struct.owl_reset_map* %14, i64 %15
  store %struct.owl_reset_map* %16, %struct.owl_reset_map** %7, align 8
  %17 = load %struct.owl_reset*, %struct.owl_reset** %6, align 8
  %18 = getelementptr inbounds %struct.owl_reset, %struct.owl_reset* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.owl_reset_map*, %struct.owl_reset_map** %7, align 8
  %21 = getelementptr inbounds %struct.owl_reset_map, %struct.owl_reset_map* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @regmap_read(i32 %19, i32 %22, i32* %8)
  store i32 %23, i32* %9, align 4
  %24 = load i32, i32* %9, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %2
  %27 = load i32, i32* %9, align 4
  store i32 %27, i32* %3, align 4
  br label %37

28:                                               ; preds = %2
  %29 = load %struct.owl_reset_map*, %struct.owl_reset_map** %7, align 8
  %30 = getelementptr inbounds %struct.owl_reset_map, %struct.owl_reset_map* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %8, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  %35 = xor i1 %34, true
  %36 = zext i1 %35 to i32
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %28, %26
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local %struct.owl_reset* @to_owl_reset(%struct.reset_controller_dev*) #1

declare dso_local i32 @regmap_read(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
